SFDCProject/src/objects/Customer_Credit__c.object
<CustomObject>
    <fields>
        <fullName>TransUnion_Reason__c</fullName>
        <label>Reason (TransUnion)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_1_truncated__c</fullName>
        <formula>SUBSTITUTE(Transunion_Adverse_Action_Reason1__c, LEFT(Transunion_Adverse_Action_Reason1__c, FIND(&quot;: &quot;, Transunion_Adverse_Action_Reason1__c)), &quot;&quot;)</formula>
        <label>Transunion Adverse Action 1 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_2_truncated__c</fullName>
        <formula>SUBSTITUTE(Transunion_Adverse_Action_Reason2__c, LEFT(Transunion_Adverse_Action_Reason2__c, FIND(&quot;: &quot;, Transunion_Adverse_Action_Reason2__c)), &quot;&quot;)</formula>
        <label>Transunion Adverse Action 2 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_3_truncated__c</fullName>
        <formula>SUBSTITUTE(Transunion_Adverse_Action_Reason3__c, LEFT(Transunion_Adverse_Action_Reason3__c, FIND(&quot;: &quot;, Transunion_Adverse_Action_Reason3__c)), &quot;&quot;)</formula>
        <label>Transunion Adverse Action 3 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_Reason1__c</fullName>
        <label>Transunion Adverse Action Reason1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_Reason2__c</fullName>
        <label>Transunion Adverse Action Reason2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transunion_Adverse_Action_Reason3__c</fullName>
        <label>Transunion Adverse Action Reason3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeaseDimension</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_Amt2__c</fullName>
        <label>1st Mortgage Amt2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_Amt3__c</fullName>
        <label>1st Mortgage Amt3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_Amt4__c</fullName>
        <label>1st Mortgage Amt4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_OpenDate2__c</fullName>
        <label>1st Mortgage OpenDate2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_OpenDate3__c</fullName>
        <label>1st Mortgage OpenDate3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_OpenDate4__c</fullName>
        <label>1st Mortgage OpenDate4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_name2__c</fullName>
        <label>1st Mortgage name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_name3__c</fullName>
        <label>1st Mortgage name3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Mortgage_name4__c</fullName>
        <label>1st Mortgage name4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_Amt2__c</fullName>
        <label>2nd Mortgage Amt2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_Amt__c</fullName>
        <label>2nd Mortgage Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_OpenDate2__c</fullName>
        <label>2nd Mortgage OpenDate2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_OpenDate__c</fullName>
        <label>2nd Mortgage OpenDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_name2__c</fullName>
        <label>2nd Mortgage name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Mortgage_name__c</fullName>
        <label>2nd Mortgage name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_at_Home__c</fullName>
        <label>Years at Home</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Customer Credit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fico__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Customer Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Credit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>